--- a/index.html
+++ b/index.html
@@ -251,33 +251,39 @@
       </div>
     </section>
 
-    <section class="grid" aria-label="Archive sections">
-      <!-- CATALOGUE RAISONNÉ -->
-      <a class="card" href="https://ronenglish-archive.github.io/ron-english-catalogue-raisonne/">
-        <div class="card-inner">
-          <div class="card-media">
-            <img src="https://picsum.photos/seed/ronenglish-catalogue/1200/900" alt="Catalogue section placeholder image" />
-          </div>
-          <div class="card-body">
-            <div>
-              <h2 class="card-title">Catalogue Raisonné</h2>
-              <p class="card-desc">
-                Paintings and works on paper, organized for long-term reference and citation.
-              </p>
-              <div class="pillrow" aria-label="Catalogue topics">
-                <span class="pill">Works on paper</span>
-                <span class="pill">Paintings</span>
-                <span class="pill">By decade</span>
-                <span class="pill">Warholesque</span>
-              </div>
-            </div>
-            <div class="cta">
-              <span class="arrow">→</span>
-              <span>Enter the catalogue</span>
-            </div>
+<section class="grid" aria-label="Archive sections">
+  <!-- CATALOGUE RAISONNÉ -->
+  <a class="card" href="https://ronenglish-archive.github.io/ron-english-catalogue-raisonne/">
+    <div class="card-inner">
+      <div class="card-media">
+        <div class="catalog-grid">
+          <img src="images/catalog-early.jpg" alt="Early work">
+          <img src="images/catalog-pop.jpg" alt="Pop painting">
+          <img src="images/catalog-concept.jpg" alt="Conceptual work">
+          <img src="images/catalog-paper.jpg" alt="Work on paper">
+        </div>
+      </div>
+      <div class="card-body">
+        <div>
+          <h2 class="card-title">Catalogue Raisonné</h2>
+          <p class="card-desc">
+            Paintings and works on paper, organized for long-term reference and citation.
+          </p>
+          <div class="pillrow" aria-label="Catalogue topics">
+            <span class="pill">Works on paper</span>
+            <span class="pill">Paintings</span>
+            <span class="pill">By decade</span>
+            <span class="pill">Warholesque</span>
           </div>
         </div>
-      </a>
+        <div class="cta">
+          <span class="arrow">→</span>
+          <span>Enter the catalogue</span>
+        </div>
+      </div>
+    </div>
+  </a>
+
 
       <!-- POPAGANDA ARCHIVE -->
       <a class="card" href="https://ronenglish-archive.github.io/Ron-English-PoPaganda-Archive/">
