--- a/index.html
+++ b/index.html
@@ -227,6 +227,27 @@
       .hero img{ height: 360px; }
     }
   </style>
+
+<style>
+  .catalog-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 6px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .catalog-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 6px;
+  }
+</style>
+
+  
 </head>
 
 <body>
