--- a/index.html
+++ b/index.html
@@ -277,12 +277,13 @@
   <a class="card" href="https://ronenglish-archive.github.io/ron-english-catalogue-raisonne/">
     <div class="card-inner">
       <div class="card-media">
-        <div class="catalog-grid">
-          <img src="images/catalog-early.jpg" alt="Early work">
-          <img src="images/catalog-pop.jpg" alt="Pop painting">
-          <img src="images/catalog-concept.jpg" alt="Conceptual work">
-          <img src="images/catalog-paper.jpg" alt="Work on paper">
-        </div>
+<div class="catalog-grid">
+  <img src="catalog-early.jpg" alt="Early work">
+  <img src="catalog-pop.jpg" alt="Pop painting">
+  <img src="catalog-concept.jpg" alt="Conceptual work">
+  <img src="catalog-paper.jpg" alt="Work on paper">
+</div>
+
       </div>
       <div class="card-body">
         <div>
