--- a/index.html
+++ b/index.html
@@ -260,17 +260,16 @@
       </p>
     </header>
 
-    <!-- HERO IMAGE
-         Step later: we’ll replace these placeholder images with your own files.
-         For now this uses a simple placeholder so the layout works immediately. -->
-    <section class="hero" aria-label="Featured image">
-      <img src="https://picsum.photos/seed/ronenglish-hero/1600/900" alt="Featured image placeholder" />
-      <div class="hero-overlay"></div>
-      <div class="hero-caption">
-        <strong>Explore the archive</strong>
-        <span>Catalogue raisonné + exhibitions, murals, and public record</span>
-      </div>
-    </section>
+<!-- HERO IMAGE -->
+<section class="hero" aria-label="Featured image">
+  <img src="hero.jpg" alt="Ron English, Delusionville Manifesto">
+  <div class="hero-overlay"></div>
+  <div class="hero-caption">
+    <strong>Explore the archive</strong>
+    <span>Catalogue raisonné + exhibitions, murals, and public record</span>
+  </div>
+</section>
+
 
 <section class="grid" aria-label="Archive sections">
   <!-- CATALOGUE RAISONNÉ -->
@@ -291,12 +290,7 @@
           <p class="card-desc">
             Paintings and works on paper, organized for long-term reference and citation.
           </p>
-          <div class="pillrow" aria-label="Catalogue topics">
-            <span class="pill">Works on paper</span>
-            <span class="pill">Paintings</span>
-            <span class="pill">By decade</span>
-            <span class="pill">Warholesque</span>
-          </div>
+         
         </div>
         <div class="cta">
           <span class="arrow">→</span>
@@ -306,34 +300,33 @@
     </div>
   </a>
 
-
-      <!-- POPAGANDA ARCHIVE -->
-      <a class="card" href="https://ronenglish-archive.github.io/Ron-English-PoPaganda-Archive/">
-        <div class="card-inner">
-          <div class="card-media">
-            <img src="https://picsum.photos/seed/ronenglish-popaganda/1200/900" alt="PoPaganda section placeholder image" />
-          </div>
-          <div class="card-body">
-            <div>
-              <h2 class="card-title">PoPaganda Archive</h2>
-              <p class="card-desc">
-                Exhibitions, murals, public appearances, ephemera, and archival context.
-              </p>
-              <div class="pillrow" aria-label="PoPaganda topics">
-                <span class="pill">Exhibitions</span>
-                <span class="pill">Murals</span>
-                <span class="pill">Public works</span>
-                <span class="pill">Ephemera</span>
-              </div>
-            </div>
-            <div class="cta">
-              <span class="arrow">→</span>
-              <span>Browse the archive</span>
-            </div>
-          </div>
+<!-- POPAGANDA ARCHIVE -->
+<a class="card" href="https://ronenglish-archive.github.io/Ron-English-PoPaganda-Archive/">
+  <div class="card-inner">
+    <div class="card-media">
+      <img src="popaganda.jpg" alt="Ron English murals and public works" />
+    </div>
+    <div class="card-body">
+      <div>
+        <h2 class="card-title">PoPaganda Archive</h2>
+        <p class="card-desc">
+          Exhibitions, murals, public appearances, ephemera, and archival context.
+        </p>
+        <div class="pillrow" aria-label="PoPaganda topics">
+          <span class="pill">Exhibitions</span>
+          <span class="pill">Murals</span>
+          <span class="pill">Public works</span>
+          <span class="pill">Ephemera</span>
         </div>
-      </a>
-    </section>
+      </div>
+      <div class="cta">
+        <span class="arrow">→</span>
+        <span>Browse the archive</span>
+      </div>
+    </div>
+  </div>
+</a>
+
 
     <div class="footer">
       <div>
