--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="hero-overlay"></div>
       <div class="hero-caption">
         <strong>Explore the archive</strong>
-        <span>Catalogue raisonné + exhibitions, murals, and public record</span>
+        <span>Catalogue raisonné and a structured archive of exhibitions, murals, and public works</span>
       </div>
     </section>
 
