--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         Maintained in the <a href="https://github.com/ronenglish-archive">ronenglish-archive</a> organization.
       </div>
       <div>
-        This site is published via GitHub Pages for long-term public access.
+        This site is published via GitHub Pages for public access.
       </div>
     </div>
   </div>
