--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
             <div class="cta" aria-hidden="true">
               <span class="arrow">→</span>
-              <span>Coming soon — catalogue first</span>
+              <span>Coming soon</span>
             </div>
           </div>
         </div>
