--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
             <div class="cta" aria-hidden="true">
               <span class="arrow">→</span>
-              <span>Planned Launch: June 2027</span>
+              <span>Archive launch scheduled for June 2027</span>
             </div>
           </div>
         </div>
