--- a/index.html
+++ b/index.html
@@ -338,29 +338,29 @@
         </div>
       </a>
 
-      <!-- POPAGANDA ARCHIVE (IN PROGRESS / DISABLED) -->
-      <div class="card is-disabled" aria-disabled="true">
-        <div class="card-inner">
-          <div class="card-media">
-            <img src="popaganda.jpg" alt="Ron English murals and public works" />
-          </div>
-          <div class="card-body">
-            <div>
-              <div class="card-title-row">
-                <h2 class="card-title">PoPaganda Archive</h2>
-                <span class="badge">In progress</span>
-              </div>
-              <p class="card-desc">
-                Exhibitions, murals, public appearances, ephemera, and archival context.
-              </p>
-            </div>
-            <div class="cta" aria-hidden="true">
-              <span class="arrow">→</span>
-              <span>Archive launch scheduled for June 2027</span>
-            </div>
-          </div>
+   <!-- POPAGANDA ARCHIVE (IN DEVELOPMENT) -->
+<div class="card is-disabled" aria-disabled="true">
+  <div class="card-inner">
+    <div class="card-media">
+      <img src="popaganda.jpg" alt="Ron English murals and public works" />
+    </div>
+    <div class="card-body">
+      <div>
+        <div class="card-title-row">
+          <h2 class="card-title">PoPaganda Archive</h2>
+          <span class="badge">In Development</span>
         </div>
+        <p class="card-desc">
+          A comprehensive archive of exhibitions, murals, public interventions, collaborations, and related ephemera, documenting the broader cultural impact of Ron English’s PoPaganda practice.
+        </p>
       </div>
+      <div class="cta" aria-hidden="true">
+        <span class="arrow">→</span>
+        <span>Archive launch scheduled for June 2027</span>
+      </div>
+    </div>
+  </div>
+</div>
 
     </section>
 
