--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
         </div>
       </a>
 
-   <!-- POPAGANDA ARCHIVE (IN DEVELOPMENT) -->
-<div class="card is-disabled" aria-disabled="true">
+<!-- POPAGANDA ARCHIVE (IN DEVELOPMENT) -->
+<a class="card" href="popaganda-archive.html">
   <div class="card-inner">
     <div class="card-media">
       <img src="popaganda.jpg" alt="Ron English murals and public works" />
@@ -351,16 +351,17 @@
           <span class="badge">In Development</span>
         </div>
         <p class="card-desc">
-          A comprehensive archive of exhibitions, murals, public interventions, collaborations, and related ephemera, documenting the broader cultural impact of Ron English’s PoPaganda practice.
+          A comprehensive archive of exhibitions, murals, public interventions, collaborations, and related ephemera,
+          documenting the broader cultural footprint of Ron English’s PoPaganda practice.
         </p>
       </div>
       <div class="cta" aria-hidden="true">
         <span class="arrow">→</span>
-        <span>Archive launch scheduled for June 2027</span>
+        <span>About the archive · Target launch: June 2027</span>
       </div>
     </div>
   </div>
-</div>
+</a>
 
     </section>
 
