--- a/popaganda-archive.html
+++ b/popaganda-archive.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -116,22 +116,17 @@
         press clippings, or archival scans), you can submit it for review. Submissions are reviewed prior to inclusion in the archive.
       </p>
 
-      <div class="cta-row">
-        <a class="btn"
-           href="https://docs.google.com/forms/d/e/1FAIpQLSephCTyQksaXN-UPNXpbEHqz5uFEBpeDrAuSaeY3vuBcDdHcg/viewform"
-           target="_blank" rel="noopener">
-          Submit documentation
-        </a>
+  <div class="cta-row">
+  <a class="btn"
+     href="https://docs.google.com/forms/d/e/1FAIpQLSephCTyQksaXN-UPNXpbEHqz5uFEBpeDrAuSaeY3vuBcDdHcg/viewform"
+     target="_blank" rel="noopener">
+    Submit documentation
+  </a>
 
-        <div class="small">
-          Opens Google Forms in a new tab.
-        </div>
-      </div>
-
-      <p class="small" style="margin-top:10px;">
-        If the button doesn’t work, copy/paste this URL:
-        <span class="mono">https://docs.google.com/forms/d/e/1FAIpQLSephCTyQksaXN-UPNXpbEHqz5uFEBpeDrAuSaeY3vuBcDdHcg/viewform</span>
-      </p>
+  <span class="small">
+    Opens in a new tab.
+  </span>
+</div>
     </section>
   </main>
 </body>
