--- a/popaganda-archive.html
+++ b/popaganda-archive.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en"> 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoPaganda Archive – About & Scope</title>
 
@@ -37,7 +37,7 @@
       flex-wrap: wrap;
       gap: 12px;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-start;
       margin-top: 12px;
     }
     .btn {
@@ -124,7 +124,7 @@
   </a>
 
   <span class="small">
-    Opens in a new tab.
+    Google Form
   </span>
 </div>
     </section>
